# TranscriptionSuite

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  package-lock.json
.github/workflows/: backend-tests.yml  dashboard-quality.yml  release-macos-metal.yml  release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-03-22-1045.md  brainstorming-session-2026-03-24-1430.md  brainstorming-session-2026-03-25-1000.md  brainstorming-session-2026-03-26-bug3.md  brainstorming-session-2026-03-26-cuda-rca.md  brainstorming-session-2026-03-26-current.md  brainstorming-session-2026-03-28-1020.md  brainstorming-session-2026-03-28-1930.md  brainstorming-session-2026-03-29-2230.md  brainstorming-session-2026-03-30-vulkan-models.md  brainstorming-session-2026-03-31-download-system.md  brainstorming-session-2026-03-31-transcription-rca.md  brainstorming-session-2026-03-31-vulkan-rca.md  brainstorming-session-2026-04-01-downloads-lifecycle.md  brainstorming-session-2026-04-01-models-notification-rca.md  brainstorming-session-2026-04-01-stop-recording-freeze.md  brainstorming-session-2026-04-02-cuda-rca.md  brainstorming-session-2026-04-08-clipboard-wayland.md  brainstorming-session-2026-04-12-in-app-updates.md  brainstorming-session-2026-04-14-deferred-work-management.md  brainstorming-session-2026-04-20-issue-87-mac-idle-rca.md  brainstorming-session-2026-04-21-idle-animation-revival.md  brainstorming-session-2026-04-24-2212-issue-99-83-rca.md  brainstorming-session-2026-05-02-issue-101-vulkan-rca.md  brainstorming-session-2026-05-14-amd-vulkan.md  brainstorming-session-2026-05-17-phase-b-live-mode.md  brainstorming-session-2026-05-19-amd-vulkan-ux.md  brainstorming-session-2026-05-31-alpine-probe-and-appdata-paths.md  brainstorming-session-2026-06-01-building-from-source.md  brainstorming-session-2026-06-05-collapse-ggml-sidecar-selector.md  quick-spec-additions-2026-03-26.md  research-data-loss-prevention-2026-03-29.md  spec-transcription-durability.md
_bmad-output/implementation-artifacts/: deferred-work.md  gh-87-blur-tier-audit.md  retrospective-issue-104.md  spec-5-vulkan-ui-profile.md  spec-5-whispercpp-deferred-polish.md  spec-activity-model-download-progress.md  spec-activity-system-server-events.md  spec-activity-system-startup-lifecycle.md  spec-activity-ui-polish.md  spec-audio-cleanup-periodic.md  spec-cancel-button-during-recording.md  spec-checkconnection-config-read-throw-safety.md  spec-clipboard-wayland-fallback.md  spec-codeql-open-alerts-cleanup.md  spec-config-changed-rearm-hardening.md  spec-container-download-tracking.md  (+125 more)
dashboard/: .npmrc  App.tsx  eslint.config.js  index.tsx  lighthouserc.json  package-lock.json  package.json
docs/: README.md  README_DEV.md  architecture-server.md  deployment-guide.md  dgx-spark-deployment.md  diarization-pipeline.md  index.md  parakeet-sortformer-server-prompt.md  project-context.md
parakeet_server/: README.md  pyproject.toml  server.py
scripts/: README-gpu-diagnostic.md  diagnose-gpu.sh  start-backend-macos-metal.sh
server/: config.yaml
server/backend/: pyproject.toml
server/backend/api/: main.py
server/backend/api/routes/: health.py  live.py  llm.py  notebook.py  profiles.py  transcription.py  websocket.py
server/backend/core/: alias_substitution.py  audio_utils.py  auto_action_coordinator.py  auto_action_sweeper.py  auto_summary_engine.py  diarization_confidence.py  diarization_engine.py  diarization_review_filter.py  diarization_review_lifecycle.py  filename_template.py  hf_token_guard.py  model_manager.py  plaintext_export.py  subtitle_export.py  webhook_payload.py  webhook_url_validation.py
server/backend/core/stt/backends/: canary_backend.py  mlx_canary_backend.py  mlx_parakeet_backend.py  mlx_thread_pin.py  mlx_vibevoice_backend.py  mlx_whisper_backend.py  parakeet_backend.py  whisperx_backend.py
server/backend/database/: __init__.py  alias_repository.py  auto_action_repository.py  database.py  dedup_query.py  diarization_review_repository.py  job_repository.py  profile_repository.py  webhook_cleanup.py  webhook_deliveries_repository.py
server/backend/database/migrations/versions/: 008_add_profiles_table.py  009_add_profile_snapshot_to_transcription_jobs.py  010_add_recording_diarization_review.py  011_add_audio_hash_to_transcription_jobs.py  012_add_audio_hash_to_recordings.py  013_add_normalized_audio_hash.py  014_add_recording_speaker_aliases.py  015_add_recording_auto_action_status.py  016_add_webhook_deliveries.py  017_add_recording_transcript_corrected.py
server/backend/services/: __init__.py  webhook_worker.py
server/backend/tests/: conftest.py  test_alias_cascade_on_recording_delete.py  test_alias_propagation_snapshots.py  test_alias_repository.py  test_alias_routes.py  test_alias_substitution.py  test_alias_substitution_sync.py  test_alias_table_migration.py  test_audio_hash_migration.py  test_audio_hash_streaming.py  test_audio_utils.py  test_auto_action_coordinator.py  test_auto_action_escalation.py  test_auto_action_independence.py  test_auto_action_repository.py  test_auto_action_retry_endpoint.py  test_auto_action_status_migration.py  test_auto_summary_truncation.py  test_banned_api_lints.py  test_bootstrap_runtime.py  test_canary_backend_load.py  test_compute_normalized_pcm_hash.py  test_confidence_buckets_sync.py  test_config_migration_master_key.py  test_create_job_audio_hash.py  test_create_job_profile_snapshot.py  test_database_migration_versioning.py  test_day1_fixtures.py  test_dedup_check_endpoint.py  test_deferred_export_sweep.py  test_delete_recording_artifacts.py  test_diarization_confidence.py  test_diarization_retry.py  test_diarization_review_lifecycle.py  test_diarization_review_repository.py  test_diarization_review_routes.py  test_export_idempotent_overwrite.py  test_filename_template_render.py  test_filename_template_resolvers_sync.py  test_filename_template_sanitizer.py  (+37 more)
server/backend/tests/fixtures/profile_snapshots/: README.md  full-v1.0.json  minimal-v1.0.json
server/backend/utils/: __init__.py  config_migration.py  keychain.py
(+187 files in other folders)
