[project]
name = "parakeet-server"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.22",
    "parakeet-mlx>=0.2.0",
    "mlx-audio>=0.4.1",
    "soundfile>=0.13.1",
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "ffmpeg-python>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
