[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcriptionsuite-server"
version = "1.3.6"
description = "TranscriptionSuite unified server for transcription services"
requires-python = ">=3.13,<3.14"
license = "GPL-3.0-or-later"
authors = [
    { name = "homelab-00" }
]
keywords = ["transcription", "whisper", "speech-to-text", "diarization"]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    # Web / API
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "python-multipart>=0.0.27",
    "pydantic>=2.12.5",
    "aiohttp>=3.14.0",
    "httpx>=0.28.1",
    "websockets>=16.0",
    # Core ML / Transcription
    "torch>=2.8.0",          # Required by PyAnnote 4.0.4
    "torchaudio>=2.8.0",     # Required by PyAnnote 4.0.4
    "pyannote.audio>=4.0.4", # Diarization (still needed for NeMo backends)
    # Audio Processing
    "numpy>=2.4.2",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10",
    "silero-vad>=6.2.1",
    "ffmpeg-python>=0.2.0",
    "scipy>=1.17.1",
    # Database
    "aiosqlite>=0.22.1",
    "sqlalchemy>=2.0.48",
    "alembic>=1.18.4",
    # Utilities
    "setuptools<81", # webrtcvad imports pkg_resources, removed in setuptools>=81
    "pyyaml>=6.0.3",
    "psutil>=7.2.2",
    "filelock>=3.25.0",
    "aiofiles>=24.1.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.7.1",
    "whisperx>=3.8.1",       # WhisperX: faster-whisper + wav2vec2 alignment + diarization
]
nemo = [
    "nemo_toolkit[asr]>=2.7.0",
]
vibevoice_asr = [
    "vibevoice @ git+https://github.com/microsoft/VibeVoice.git@1807b858d4f7dffdd286249a01616c243e488c9e",
]
mlx = [
    "parakeet-mlx>=0.2.0",
    "canary-mlx>=0.1.0",
    "soundfile>=0.13.1",
    "mlx-audio>=0.4.1",
    # Live Mode uses faster-whisper even on Metal.
    "faster-whisper>=1.2.1",
    "ctranslate2>=4.7.1",
]
[project.scripts]
transcription-server = "server.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pip-licenses>=5.5.1",
    # Day-1 test fixtures (Story 1.1 — Audio Notebook QoL pack epic-foundations)
    "keyring>=25.0,<26",        # NFR33 — real-keychain integration target (Story 1.7)
    "keyrings.alt>=5.0",        # NFR34 — file-encrypted fallback for headless Linux
    "freezegun>=1.5",           # frozen_clock fixture; replaces datetime.now() in tests (NFR54 ban)
    "pytest-benchmark>=5.0",    # NFR1 — CRUD latency <15% regression budget
    "ruff>=0.7",                # AC2/AC4 — TID flake8-tidy-imports.banned-api enforcement
]

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["__pycache__", ".venv"]

[tool.ruff.lint]
# E/F = pycodestyle errors + Pyflakes; TID = flake8-tidy-imports (TID251 = banned-api).
# TID is selected globally so the banned-api rule below applies to imports/attribute
# access by default. Production directories are opted out via per-file-ignores
# (tests/** stays subject to the TID251 ban — that is the discipline gate from AC2).
select = ["E", "F", "TID"]
# E501 (line length) is enforced project-wide by formatters, not ruff — matches
# the convention already in build/pyproject.toml.
# TID252 (prefer absolute over relative imports) is suppressed globally: the project
# intentionally uses intra-package relative imports throughout production code.
ignore = ["E501", "TID252"]

[tool.ruff.lint.per-file-ignores]
# Production code legitimately uses time.sleep (model preload backoff),
# datetime.now (timestamp generation), and httpx.Client (outbound webhooks).
# TID251 is suppressed for every production directory; the ban applies to tests/ only.
# (pyproject.toml lives at server/backend/, so paths are relative to that root.)
"api/**/*.py" = ["TID251"]
"core/**/*.py" = ["TID251"]
"database/**/*.py" = ["TID251"]
"logging/**/*.py" = ["TID251"]
"config.py" = ["TID251"]
"config_tree.py" = ["TID251"]
"__init__.py" = ["TID251"]
# Pre-existing test files that use datetime.now() / time.sleep() before Story 1.1
# landed the banned-api gate. Migrating them to frozen_clock is out of scope here
# (would touch test logic outside conftest.py — see Story 1.1 task 14.4 audit).
# These exemptions are tech-debt; new test files MUST NOT be added to this list.
"tests/test_token_store.py" = ["TID251"]
"tests/test_ensure_transcription_loaded.py" = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# Day-1 banned APIs in tests/ — see comment header at the top of tests/conftest.py.
# If a test legitimately needs one of these (e.g. integration test against a real
# external HTTP service), add `# noqa: TID251` with a one-line justification.
"time.sleep".msg = "Use asyncio.Event.wait(timeout=...) or frozen_clock fixture"
"datetime.datetime.now".msg = "Use frozen_clock fixture"
"httpx.Client".msg = "Use webhook_mock_receiver or aiohttp TestServer"
"httpx.AsyncClient".msg = "Use webhook_mock_receiver or aiohttp TestServer"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "p0: Critical — data integrity, security, core functionality",
    "p1: High — core user journeys, integration points",
    "p2: Medium — secondary flows, edge cases, coverage hardening",
    "p3: Low — benchmarks, exploratory, nice-to-have",
    "benchmark: Performance benchmarks (latency, throughput)",
    "durability: Transcription result persistence and failure recovery",
    "live_mode: Live Mode transcription engine and session",
    "model_swap: Model swap lifecycle and recovery",
    "openai_api: OpenAI-compatible API format and edge cases",
]

# The section below is needed to specifically get CUDA 12.9 (and not the default 12.8).
#
# Legacy-GPU image variant (Issue #83): no separate cu126 index is declared here.
# The legacy bootstrap path overrides the URL of the `pytorch-cu129` named index
# at install time via `--index pytorch-cu129=https://download.pytorch.org/whl/cu126`
# (name-reuse URL swap), which is what actually redirects the source pin below.
# Declaring a second named index (e.g. pytorch-cu126) would have no effect because
# `[tool.uv.sources]` pins torch/torchaudio to the *name* pytorch-cu129 — a new
# name would just be ignored by the source resolver.
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
# Linux/Windows: use CUDA 12.9 build; macOS: fall back to PyPI CPU/MPS build
torch = [{ index = "pytorch-cu129", marker = "sys_platform != 'darwin'" }]
torchaudio = [{ index = "pytorch-cu129", marker = "sys_platform != 'darwin'" }]

# mlx-audio (in the mlx extra) has dependency requirements that conflict with
# the CUDA-oriented extras (whisper, nemo, vibevoice_asr).  The mlx extra is
# macOS-only; the others target Linux/Windows CUDA.  They are never installed
# in the same environment.
[tool.uv]
conflicts = [
    [
        { extra = "mlx" },
        { extra = "nemo" },
    ],
    [
        { extra = "mlx" },
        { extra = "vibevoice_asr" },
    ],
    [
        { extra = "mlx" },
        { extra = "whisper" },
    ],
]
